<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/title"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/note"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/summaryTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="5"
                android:gravity="top|left" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/addNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_200"
            android:text="@string/confirm"
            />
        <Button
            android:id="@+id/delNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/delete"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@android:color/holo_red_light"
            />
    </LinearLayout>
</LinearLayout>